fixed heights to prevent overlap

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,8 +18,8 @@ main {
   display: flex;
   min-width: 80%;
   max-width: 100%;
-  max-height: calc(100vh - 50px);
-  margin-block: 10%;
+  min-height: 100vh;
+  height: fit-content;
   margin-inline: 0;
   flex-direction: column;
   justify-content: flex-start;
@@ -34,11 +34,11 @@ code {
 }
 
 .page-container {
-  max-height: calc(100vh - 50px);
+  height: fit-content;
   display: flex;
   width: 100vw;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   padding-inline: 5%;
   align-items: center;
   background-color: #fafafa;
